Fixes server auto restart